<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_nuwc__main_"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.NUWC_ETJ.displays.NUWC_MAIN_Activity">

    <Button
        android:text="@string/text_personal_information"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/personal"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="48dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:drawableRight="@drawable/ic_account_circle_black_24px"
        android:drawableEnd="@drawable/ic_account_circle_black_24px"/>


    <Button
        android:text="@string/text_career_information"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/career"
        android:layout_below="@+id/personal"
        android:layout_marginTop="25dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:drawableRight="@drawable/ic_class_black_24px"
        android:drawableEnd="@drawable/ic_class_black_24px"/>


    <Button
        android:text="@string/text_credentials"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cred"
        android:layout_below="@+id/career"
        android:layout_marginTop="25dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:drawableRight="@drawable/ic_assignment_ind_black_24px"
        android:drawableEnd="@drawable/ic_assignment_ind_black_24px"/>

    <Button
        android:text="@string/text_refresh_database"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/refresh"
        android:layout_below="@+id/cred"
        android:layout_marginTop="25dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        />

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        app:itemBackground="@color/colorPrimary"
        app:itemIconTint="@color/white"
        app:itemTextColor="@color/white"
        app:menu="@menu/bottom_navigation_main" />

</RelativeLayout>
