<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_nuwc__nec"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.NUWC_ETJ.displays.NUWC_NEC">

    <Button
        android:text="@string/text_classifications"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nec_classification"
        android:layout_marginTop="48dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:drawableRight="@drawable/ic_class_black_24px"
        android:drawableEnd="@drawable/ic_class_black_24px"/>

    <Button
        android:text="@string/text_languages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nec_lang"
        android:layout_below="@+id/nec_classification"
        android:layout_marginTop="25dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:drawableRight="@drawable/ic_language_black_24px"
        android:drawableEnd="@drawable/ic_language_black_24px"/>

    <Button
        android:text="@string/text_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nec_history"
        android:layout_below="@+id/nec_lang"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:drawableRight="@drawable/ic_history_black_24px"
        android:drawableEnd="@drawable/ic_history_black_24px"/>

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        app:itemBackground="@color/colorPrimary"
        app:itemIconTint="@color/white"
        app:itemTextColor="@color/white"
        app:menu="@menu/bottom_navigation_career" />

</RelativeLayout>
