<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_nuwc__credentials"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.NUWC_ETJ.displays.NUWC_Credentials">

    <Button
        android:text="@string/text_training"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/training"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="48dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:drawableRight="@drawable/ic_assignment_ind_black_24px"
        android:drawableEnd="@drawable/ic_assignment_ind_black_24px"/>

    <Button
        android:text="@string/text_qualifications"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/qual"
        android:layout_below="@+id/training"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:drawableRight="@drawable/ic_assessment_black_24px"
        android:drawableEnd="@drawable/ic_assessment_black_24px"/>

    <Button
        android:text="@string/text_asvab_btb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/asvab"
        android:layout_below="@+id/qual"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:drawableRight="@drawable/ic_assignment_turned_in_black_24px"
        android:drawableEnd="@drawable/ic_assignment_turned_in_black_24px"/>


    <android.support.design.widget.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        app:itemBackground="@color/colorPrimary"
        app:itemIconTint="@color/white"
        app:itemTextColor="@color/white"
        app:menu="@menu/bottom_navigation_credentials" />

</RelativeLayout>
